--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "kanban",
+  "homepage": "https://aswan123.github.io/Kanban-v2/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
